<resources>
    <string name="app_name">Contactless</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="telegram">Telegram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="country_code">20</string>
    <string name="exmaple_number">1112223333</string>
    <string name="enter_a_phone_number">Enter a phone number</string>
    <string name="home_description">Enter the recipient\'s phone number. No need to save contacts!</string>
    <string name="phone_cannot_be_empty">Must not be empty.</string>
    <string name="must_be_valid_phone_number">Must be valid phone number.</string>
    <string name="no_phone_found">No phone numbers found in this qr code</string>
    <string name="choose_a_scanning_method">Select a method to get the phone number</string>
    <string name="select_method_description">Choose a method for convenient and efficient scanning.</string>
    <string name="save">Save</string>
    <string name="dial">Dial</string>
    <string name="contacts">Contacts</string>
    <string name="home">Home</string>
</resources>